# btcp-http-server

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
docs/uml/btcp-http-server/: .gitignore
docs/uml/btcp-http-server/data/fragments/my_website_backend/model/Standard.Class/: 81d89c53-20ba-4b58-a551-a45a25907915.exml  ac109eca-2b13-43ec-b4a4-477d5db557ba.exml
docs/uml/btcp-http-server/data/fragments/my_website_backend/model/Standard.Interaction/: 2ebbcedb-804d-492f-ae1b-bdf4c5279d61.exml
docs/uml/btcp-http-server/data/fragments/my_website_backend/model/Standard.Package/: b174d4dc-571e-4a95-94c6-e12dd5cf3482.exml
docs/uml/btcp-http-server/data/fragments/my_website_backend/model/Standard.SequenceDiagram/: 09c31761-14e4-43b4-86e3-d4c3ba1e311c.exml
docs/uml/my_website_backend/: project.conf
docs/uml/my_website_backend/.runtime/: .save  lock.info  projectInfo.html
docs/uml/my_website_backend/.runtime/fragments/my_website_backend/.index/: index.dbf.0  index.dbf.t  index.dbr.0  index.dbr.t  index.idf.0  index.idf.t  index.idr.0  index.idr.t
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Infrastructure.DiagramSet/: ba6b6b1a-89f8-473c-8391-009f1177fcd8.exml
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Infrastructure.ModuleComponent/: 8289195e-f243-4b1a-8c2d-dc17019a8e3a.exml
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Infrastructure.Profile/: a72eea53-45e6-4537-b161-299d3c74da1f.exml
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Standard.Class/: b8848aa9-91a8-431b-ad39-41ab6e1beb7b.exml
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Standard.ClassDiagram/: 941b8829-e60b-4d0e-a065-2dbeedf58515.exml
docs/uml/my_website_backend/data/fragments/my_website_backend/model/Standard.Interaction/: 2330cc88-cd90-48e3-b6c5-f3e4b2310240.exml
src/: CMakeLists.txt  CMakeSettings.json  main.cpp  main.h
src/fileloading/: HeadForger.cpp  HeadForger.h  ResponseMapper.cpp  ResponseMapper.h
src/network/http/: HTTPHandler.cpp  HTTPHandler.h
src/network/tcp/: TCPHandler.cpp  TCPHandler.h
src/threads/: ThreadHandler.cpp  ThreadHandler.h  ThreadUtility.cpp  ThreadUtility.h
(+7 files in other folders)
